fix: margin top banner on various pages after removing running header, remove white spaces around invite code

--- a/app/assets/stylesheets/components/_user-form.scss
+++ b/app/assets/stylesheets/components/_user-form.scss
@@ -1,6 +1,6 @@
 .user {
 	background-color: $primary-transparent;
-	margin-top: 4rem;
+	margin-top: 2rem;
 
 	h1 {
 		margin-bottom: .5rem;
