--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-	margin: 4rem 0 0;
+	margin: 2rem 0 0;
 	background-color: $primary-super-transparent;
 
 	&__header {
