--- a/app/assets/stylesheets/pages/_general.scss
+++ b/app/assets/stylesheets/pages/_general.scss
@@ -1,5 +1,5 @@
 .general {
-	margin: 4rem 0;
+	margin: 2rem 0;
 
 	&__header {
 		color: $white;
